# etl-log-processor

./: .env.example  .gitignore  README.md  pyproject.toml
src/: database.py  extract.py  load.py  main.py  transform.py
